syntax = "proto3";

import "google/protobuf/timestamp.proto";

// protoc \
//     --proto_path=./shared/proto \
//     --go_out=paths=source_relative:./token/internal/grpc/pb \
//     --go-grpc_out=paths=source_relative:./token/internal/grpc/pb \
//     ./shared/proto/token.proto


package tokenpb;

option go_package = "github.com/myacey/jxgercorp-banking/services/shared/proto/tokenpb";

service TokenService {
    rpc GenerateToken(GenerateTokenRequest) returns (GenerateTokenResponse);
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message GenerateTokenRequest {
    string username = 1;
    google.protobuf.Timestamp ttl = 2;
}

message GenerateTokenResponse {
    string token = 1;
}

message ValidateTokenRequest {
    // string username = 1;
    string token = 1;
}

message ValidateTokenResponse {
    string username = 1;
    bool valid = 2;
}
